修复编译错误，兼容JDK1.8